<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityCreateSession$PlaceholderFragment">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/session_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/session_name_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/astrophoto_dark_text" />

        <EditText
            android:id="@+id/session_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="start"
            android:layout_span="3"
            android:layout_weight="3"
            android:hint="@string/session_name_hint"
            android:singleLine="true"
            android:inputType="text"
            android:textColor="@color/astrophoto_dark_text"
            android:textColorHint="@color/astrophoto_hint_text" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/location_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/astrophoto_dark_text" />

        <EditText
            android:id="@+id/location_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="start"
            android:layout_span="3"
            android:layout_weight="3"
            android:hint="@string/location_hint"
            android:singleLine="true"
            android:inputType="text"
            android:textColor="@color/astrophoto_dark_text"
            android:textColorHint="@color/astrophoto_hint_text" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/file_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/file_name_hint"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/astrophoto_dark_text" />

        <TextView
            android:id="@+id/file_name_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="start"
            android:layout_span="3"
            android:layout_weight="3"
            android:text="@string/temp_file_name"
            android:textColor="@color/astrophoto_dark_text"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="1"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/id_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/astrophoto_dark_text" />

        <TextView
            android:id="@+id/time_zone_label_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="1"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/time_zone_label_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/astrophoto_dark_text" />

        <TextView
            android:id="@+id/dst_label_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_span="1"
            android:layout_weight="1"
            android:text="@string/dst_label_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/astrophoto_dark_text" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/camera_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/camera_label_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/astrophoto_dark_text" />

        <EditText
            android:id="@+id/camera_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="1"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/camera_hint"
            android:singleLine="true"
            android:inputType="text"
            android:textColor="@color/astrophoto_dark_text"
            android:textColorHint="@color/astrophoto_hint_text" />

        <EditText
            android:id="@+id/camera_time_zone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="1"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:hint="@string/camera_time_zone_hint"
            android:text="@string/gmt_init_txt"
            android:singleLine="true"
            android:inputType="text"
            android:textColor="@color/astrophoto_dark_text"
            android:textColorHint="@color/astrophoto_hint_text" />

        <CheckBox
            android:id="@+id/camera_dst_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_span="1"
            android:layout_weight="1"
            android:background="@color/astrophoto_check_box"
            android:textColor="@color/astrophoto_dark_text" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/android_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/android_device_label_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/astrophoto_dark_text" />

        <EditText
            android:id="@+id/android_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="1"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/android_id_hint"
            android:singleLine="true"
            android:inputType="text"
            android:textColor="@color/astrophoto_dark_text"
            android:textColorHint="@color/astrophoto_hint_text" />

<!-- TODO:  Should probably have GMT - pre-entered -->
        <EditText
            android:id="@+id/android_time_zone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="1"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:hint="@string/android_time_zone_hint"
            android:text="@string/gmt_init_txt"
            android:singleLine="true"
            android:inputType="text"
            android:textColor="@color/astrophoto_dark_text"
            android:textColorHint="@color/astrophoto_hint_text" />

        <CheckBox
            android:id="@+id/android_dst_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_span="1"
            android:layout_weight="1"
            android:background="@color/astrophoto_check_box"
            android:textColor="@color/astrophoto_dark_text" />

    </TableRow>

</TableLayout>
