<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ActivityCloseSesion"
    tools:showIn="@layout/activity_close_session">

    <TextView
        android:id="@+id/close_session_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/closeSession" />

    <EditText
        android:id="@+id/close_session_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/close_session_tv"
        android:hint="@string/closeSessionNow"/>

    <TextView
        android:id="@+id/misc_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/close_session_edit_text"
        android:text="@string/miscPopToastForClose" />

</RelativeLayout>
